--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
     "vant": "^2.5.5",
